src/main/java/de/calamanari/pk/ohbf/bloombox/bbq/BbqParser.java
//@formatter:off
/*
 * BbqParser
 * Code-Beispiel zum Buch Patterns Kompakt, Verlag Springer Vieweg
 * Copyright 2014 Karl Eilebrecht
 * 
 * Licensed under the Apache License, Version 2.0 (the "License"):
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
//@formatter:on

package de.calamanari.pk.ohbf.bloombox.bbq;

import java.util.List;

import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

//Generated from Bbq.g4 by ANTLR 4.13.1 

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class BbqParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, ESCESC = 11, ESCSQ = 12,
            ESCDQ = 13, AND = 14, OR = 15, NOT = 16, IN = 17, MINMAX = 18, SIMPLE_WORD = 19, SQWORD = 20, DQWORD = 21;
    public static final int RULE_argName = 0, RULE_argValue = 1, RULE_lowerBound = 2, RULE_upperBound = 3, RULE_inValue = 4, RULE_nextValue = 5,
            RULE_cmpEquals = 6, RULE_cmpNotEquals = 7, RULE_cmpIn = 8, RULE_cmpNotIn = 9, RULE_minMaxExpression = 10, RULE_expressionDetails = 11,
            RULE_orExpression = 12, RULE_andExpression = 13, RULE_expression = 14, RULE_bracedExpression = 15, RULE_notExpression = 16, RULE_bbqDetails = 17,
            RULE_andBBQ = 18, RULE_orBBQ = 19, RULE_fullBBQ = 20, RULE_query = 21;

    private static String[] makeRuleNames() {
        return new String[] { "argName", "argValue", "lowerBound", "upperBound", "inValue", "nextValue", "cmpEquals", "cmpNotEquals", "cmpIn", "cmpNotIn",
                "minMaxExpression", "expressionDetails", "orExpression", "andExpression", "expression", "bracedExpression", "notExpression", "bbqDetails",
                "andBBQ", "orBBQ", "fullBBQ", "query" };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] { null, "' '", "'\\t'", "'\\r'", "'\\n'", "','", "'='", "'!'", "'('", "';'", "')'" };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] { null, null, null, null, null, null, null, null, null, null, null, "ESCESC", "ESCSQ", "ESCDQ", "AND", "OR", "NOT", "IN", "MINMAX",
                "SIMPLE_WORD", "SQWORD", "DQWORD" };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Bbq.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public BbqParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ArgNameContext extends ParserRuleContext {
        public TerminalNode SIMPLE_WORD() {
            return getToken(BbqParser.SIMPLE_WORD, 0);
        }

        public TerminalNode SQWORD() {
            return getToken(BbqParser.SQWORD, 0);
        }

        public TerminalNode DQWORD() {
            return getToken(BbqParser.DQWORD, 0);
        }

        public ArgNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_argName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterArgName(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitArgName(this);
            }
        }
    }

    public final ArgNameContext argName() throws RecognitionException {
        ArgNameContext _localctx = new ArgNameContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_argName);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 3670016L) != 0))) {
                    _errHandler.recoverInline(this);
                }
                else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ArgValueContext extends ParserRuleContext {
        public TerminalNode SIMPLE_WORD() {
            return getToken(BbqParser.SIMPLE_WORD, 0);
        }

        public TerminalNode SQWORD() {
            return getToken(BbqParser.SQWORD, 0);
        }

        public TerminalNode DQWORD() {
            return getToken(BbqParser.DQWORD, 0);
        }

        public ArgValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_argValue;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterArgValue(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitArgValue(this);
            }
        }
    }

    public final ArgValueContext argValue() throws RecognitionException {
        ArgValueContext _localctx = new ArgValueContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_argValue);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 3670016L) != 0))) {
                    _errHandler.recoverInline(this);
                }
                else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LowerBoundContext extends ParserRuleContext {
        public TerminalNode SIMPLE_WORD() {
            return getToken(BbqParser.SIMPLE_WORD, 0);
        }

        public LowerBoundContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_lowerBound;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterLowerBound(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitLowerBound(this);
            }
        }
    }

    public final LowerBoundContext lowerBound() throws RecognitionException {
        LowerBoundContext _localctx = new LowerBoundContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_lowerBound);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                match(SIMPLE_WORD);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class UpperBoundContext extends ParserRuleContext {
        public TerminalNode SIMPLE_WORD() {
            return getToken(BbqParser.SIMPLE_WORD, 0);
        }

        public UpperBoundContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_upperBound;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterUpperBound(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitUpperBound(this);
            }
        }
    }

    public final UpperBoundContext upperBound() throws RecognitionException {
        UpperBoundContext _localctx = new UpperBoundContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_upperBound);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                match(SIMPLE_WORD);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class InValueContext extends ParserRuleContext {
        public ArgValueContext argValue() {
            return getRuleContext(ArgValueContext.class, 0);
        }

        public InValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_inValue;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterInValue(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitInValue(this);
            }
        }
    }

    public final InValueContext inValue() throws RecognitionException {
        InValueContext _localctx = new InValueContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_inValue);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(52);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(57);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(58);
                argValue();
                setState(62);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(59);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NextValueContext extends ParserRuleContext {
        public InValueContext inValue() {
            return getRuleContext(InValueContext.class, 0);
        }

        public NextValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_nextValue;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterNextValue(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitNextValue(this);
            }
        }
    }

    public final NextValueContext nextValue() throws RecognitionException {
        NextValueContext _localctx = new NextValueContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_nextValue);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(T__4);
                setState(66);
                inValue();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CmpEqualsContext extends ParserRuleContext {
        public ArgNameContext argName() {
            return getRuleContext(ArgNameContext.class, 0);
        }

        public ArgValueContext argValue() {
            return getRuleContext(ArgValueContext.class, 0);
        }

        public CmpEqualsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmpEquals;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterCmpEquals(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitCmpEquals(this);
            }
        }
    }

    public final CmpEqualsContext cmpEquals() throws RecognitionException {
        CmpEqualsContext _localctx = new CmpEqualsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_cmpEquals);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                argName();
                setState(72);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(69);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(75);
                match(T__5);
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(76);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(81);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(82);
                argValue();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CmpNotEqualsContext extends ParserRuleContext {
        public ArgNameContext argName() {
            return getRuleContext(ArgNameContext.class, 0);
        }

        public ArgValueContext argValue() {
            return getRuleContext(ArgValueContext.class, 0);
        }

        public CmpNotEqualsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmpNotEquals;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterCmpNotEquals(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitCmpNotEquals(this);
            }
        }
    }

    public final CmpNotEqualsContext cmpNotEquals() throws RecognitionException {
        CmpNotEqualsContext _localctx = new CmpNotEqualsContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_cmpNotEquals);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                argName();
                setState(88);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(85);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(90);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(91);
                match(T__6);
                setState(92);
                match(T__5);
                setState(96);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(93);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(98);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(99);
                argValue();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CmpInContext extends ParserRuleContext {
        public ArgNameContext argName() {
            return getRuleContext(ArgNameContext.class, 0);
        }

        public TerminalNode IN() {
            return getToken(BbqParser.IN, 0);
        }

        public InValueContext inValue() {
            return getRuleContext(InValueContext.class, 0);
        }

        public List<NextValueContext> nextValue() {
            return getRuleContexts(NextValueContext.class);
        }

        public NextValueContext nextValue(int i) {
            return getRuleContext(NextValueContext.class, i);
        }

        public LowerBoundContext lowerBound() {
            return getRuleContext(LowerBoundContext.class, 0);
        }

        public UpperBoundContext upperBound() {
            return getRuleContext(UpperBoundContext.class, 0);
        }

        public CmpInContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmpIn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).enterCmpIn(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof BbqListener) {
                ((BbqListener) listener).exitCmpIn(this);
            }
        }
    }

    public final CmpInContext cmpIn() throws RecognitionException {
        CmpInContext _localctx = new CmpInContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_cmpIn);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                argName();
                setState(103);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(102);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(105);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0));
                setState(107);
                match(IN);
                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                    {
                        {
                            setState(108);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                _errHandler.recoverInline(this);
                            }
                            else {
                                if (_input.LA(1) == Token.EOF) {
                                    matchedEOF = true;
                                }
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(113);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(114);
                match(T__7);
                setState(115);
                inValue();
                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__4) {
                    {
                        {
                            setState(116);
                            nextValue();
                        }
                    }
                    setState(121);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(136);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                case 1: {
                    setState(122);
                    match(T__8);
                    setState(126);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                        {
                            {
                                setState(123);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                    _errHandler.recoverInline(this);
                                }
                                else {
                                    if (_input.LA(1) == Token.EOF) {
                                        matchedEOF = true;
                                    }
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                            }
                        }
                        setState(128);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(129);
                    lowerBound();
                    setState(133);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                        {
                            {
                                setState(130);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                    _errHandler.recoverInline(this);
                                }
                                else {
                                    if (_input.LA(1) == Token.EOF) {
                                        matchedEOF = true;
                                    }
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                            }
                        }
                        setState(135);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                    break;
                }
                setState(152);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__8) {
                    {
                        setState(138);
                        match(T__8);
                        setState(142);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                            {
                                {
                                    setState(139);
                                    _la = _input.LA(1);
                                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                        _errHandler.recoverInline(this);
                                    }
                                    else {
                                        if (_input.LA(1) == Token.EOF) {
                                            matchedEOF = true;
                                        }
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                }
                            }
                            setState(144);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(145);
                        upperBound();
                        setState(149);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
                            {
                                {
                                    setState(146);
                                    _la = _input.LA(1);
                                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0))) {
                                        _errHandler.recoverInline(this);
                                    }
                                    else {
                                        if (_input.LA(1) == Token.EOF) {
                                            matchedEOF = true;
                                        }
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                }
                            }
                            setState(151);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(154);
                match(T__9);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CmpNotInContext extends ParserRuleContext {
        public ArgNameContext argName() {
            return getRuleContext(ArgNameContext.class, 0);
        }

        public TerminalNode NOT() {
            return getToken(BbqParser.NOT, 0);
        }

        public TerminalNode IN() {
            return getToken(BbqParser.IN, 0);
        }
